crates/gritmodule/src/snapshots/marzano_gritmodule__resolver__tests__resolve_enforcement_level.snap
---
source: crates/gritmodule/src/resolver.rs
expression: resolved_patterns
---
- config:
    name: hidden_pattern
    body: "language js\n`console.log($_)` => .\n"
    level: none
    title: ~
    description: ~
    tags: ~
    samples: ~
    path: ".grit/grit.yaml"
    range:
      start:
        line: 3
        column: 11
      end:
        line: 3
        column: 11
      startByte: 35
      endByte: 35
    raw: ~
  module:
    type: Module
    host: github.com
    fullName: getgrit/rewriter
    remote: "https://github.com/getgrit/rewriter.git"
    providerName: github.com/getgrit/rewriter
  localName: hidden_pattern
  body: "language js\n`console.log($_)` => .\n"
  kind: pattern
  language: js
  visibility: public
- config:
    name: remove_console_error
    body: "engine marzano(0.1)\nlanguage js\n\n`console.error($_)` => .\n"
    level: error
    title: ~
    description: ~
    tags: ~
    samples: ~
    path: ".grit/grit.yaml"
    range:
      start:
        line: 15
        column: 11
      end:
        line: 15
        column: 11
      startByte: 266
      endByte: 266
    raw: ~
  module:
    type: Module
    host: github.com
    fullName: getgrit/rewriter
    remote: "https://github.com/getgrit/rewriter.git"
    providerName: github.com/getgrit/rewriter
  localName: remove_console_error
  body: "engine marzano(0.1)\nlanguage js\n\n`console.error($_)` => .\n"
  kind: pattern
  language: js
  visibility: public
- config:
    name: remove_console_log
    body: "engine marzano(0.1)\nlanguage js\n\n`console.log($_)` => .\n"
    level: warn
    title: ~
    description: ~
    tags: ~
    samples: ~
    path: ".grit/grit.yaml"
    range:
      start:
        line: 8
        column: 11
      end:
        line: 8
        column: 11
      startByte: 135
      endByte: 135
    raw: ~
  module:
    type: Module
    host: github.com
    fullName: getgrit/rewriter
    remote: "https://github.com/getgrit/rewriter.git"
    providerName: github.com/getgrit/rewriter
  localName: remove_console_log
  body: "engine marzano(0.1)\nlanguage js\n\n`console.log($_)` => .\n"
  kind: pattern
  language: js
  visibility: public
